--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 	  			</div>
 	  			<div class="content">
 	  				<p>
-	  					Hi there! My name is Isachanka Yuliya and I'm from Minsk, Belarus. I'm a maggot of full stack web developer. I made this portfolio site for Free Code Camp challenge and it's my first one! I wrote it using a w3.css framework. In my free time I like to play with my dog <a href="https://pbs.twimg.com/media/DSxeJSSXUAAvCma.jpg">Reenah</a> and play video game. Thanks for visiting my page!
+	  					Hi there! My name is Isachanka Yuliya and I'm from Minsk, Belarus. I'm a maggot of full stack web developer. I made this portfolio site for Free Code Camp challenge and it's my first one! I wrote it using a w3.css framework. In my free time I like to play with my dog <a href="https://pbs.twimg.com/media/DSxeJSSXUAAvCma.jpg" target="_blank">Reenah</a> and play video game. Thanks for visiting my page!
  	  				</p>	
 	  			</div>
 	  		</div>
